--- a/interface-web/homePage/index.css
+++ b/interface-web/homePage/index.css
@@ -9,7 +9,7 @@
 .title {
   font-size: 48px;
   font-weight: bold;
-  margin-top: 40px;
+  margin-top: 80px;
   margin-bottom: 80px;
   text-align: center;
   color: #fff;
@@ -153,4 +153,66 @@
   bottom: 20px;
   font-size: 10px;
   color: #ccc;
+}
+
+.accessibility-switch {
+  position: absolute;    
+  top: 20px;             
+  left: 20px;            
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+
+  align-items: center; 
+  color: #888;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 28px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;                    
+  background-color: #c62828;    
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 3px;
+  bottom: 3px;
+  background-color: #fff;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2e7d32;   
+}
+input:checked + .slider:before {
+  transform: translateX(22px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
 }
