--- a/interface-web/identifyNote/identifyNote.css
+++ b/interface-web/identifyNote/identifyNote.css
@@ -27,3 +27,11 @@ button:active {
 .stop-button:active {
   background-color: #d32f2f;
 }
+
+.duration-display {
+  text-align: center;
+  font-size: 28px; 
+  color: #bdbdbd;   
+  margin-top: 5px; 
+  margin-bottom: 20px;
+}
